Fix license image alignment.

--- a/_shared/styles/web-fundamentals.css
+++ b/_shared/styles/web-fundamentals.css
@@ -141,7 +141,7 @@ cite {
   margin-right: 20px;
 }
 footer p.license img {
-  margin-right: 0 .5em -.15em 0;
+  margin: 0 .5em -.15em 0;
 }
 
 /* Content table slides */
